refactored entity accessors for typed Attributes/Ref + all tests now running in fork mode + implemented all TxReport.resolve